# disk-agent

./: .gitignore  Cargo.toml  README.md  pyproject.toml
disk_agent/: classify.py  cli.py  diff.py  explain.py  investigate.py  models.py  report.py  snapshot.py
disk_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
disk_agent/rules/: copilot.yaml  npm.yaml  podman.yaml
docs/: DESIGN.md  HANDOFF_2026-06-29.md  MIGRATION.md  SNAPSHOT_FORMAT.md
legacy/python/: README.md  pyproject.toml
legacy/python/disk_agent/: __init__.py  cli.py  snapshot.py
legacy/python/disk_agent/rules/: cargo.yaml  codex.yaml  repos.yaml
rules/: cargo.yaml  codex.yaml  common.yaml  copilot.yaml  npm.yaml  podman.yaml  repos.yaml
src/: attribution.rs  classify.rs  cli.rs  command.rs  diff.rs  explain.rs  filesystem.rs  investigate.rs  json.rs  lib.rs  main.rs  models.rs  output.rs  paths.rs  podman.rs  report.rs  rules.rs  snapshot.rs
tests/: classify.rs  cli.rs  compatibility.rs  diff.rs  explain.rs  investigate.rs  live_collection.rs  report.rs  snapshot.rs  snapshot_format.rs  test_disk_agent.py
tests/fixtures/: python_snapshot_minimal.json  snapshot_full.json
