[package]
name = "disk-agent"
version = "0.1.0"
edition = "2021"
description = "Bounded, read-only disk usage observer"
publish = false

[lib]
name = "disk_agent"
path = "src/lib.rs"

[[bin]]
name = "disk-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
